// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ObjectStatus ObjectStatus: state: Error 1`] = `
<div
  class="ObjectStatus-objectStatus-0"
>
  <div
    class="ObjectStatus-icon-0 ObjectStatus-iconError-0"
  >
    <ui5-icon
      accessible-name=""
      name="status-negative"
      style="font-size: 1rem;"
    />
  </div>
</div>
`;

exports[`ObjectStatus ObjectStatus: state: Information 1`] = `
<div
  class="ObjectStatus-objectStatus-0"
>
  <div
    class="ObjectStatus-icon-0 ObjectStatus-iconInformation-0"
  >
    <ui5-icon
      accessible-name=""
      name="hint"
      style="font-size: 1rem;"
    />
  </div>
</div>
`;

exports[`ObjectStatus ObjectStatus: state: None 1`] = `
<div
  class="ObjectStatus-objectStatus-0"
>
  <div
    class="ObjectStatus-icon-0 ObjectStatus-iconNone-0"
  >
    <ui5-icon
      accessible-name=""
      name="status-inactive"
      style="font-size: 1rem;"
    />
  </div>
</div>
`;

exports[`ObjectStatus ObjectStatus: state: Success 1`] = `
<div
  class="ObjectStatus-objectStatus-0"
>
  <div
    class="ObjectStatus-icon-0 ObjectStatus-iconSuccess-0"
  >
    <ui5-icon
      accessible-name=""
      name="status-positive"
      style="font-size: 1rem;"
    />
  </div>
</div>
`;

exports[`ObjectStatus ObjectStatus: state: Warning 1`] = `
<div
  class="ObjectStatus-objectStatus-0"
>
  <div
    class="ObjectStatus-icon-0 ObjectStatus-iconWarning-0"
  >
    <ui5-icon
      accessible-name=""
      name="status-critical"
      style="font-size: 1rem;"
    />
  </div>
</div>
`;

exports[`ObjectStatus Render without Crashing 1`] = `
<div
  class="ObjectStatus-objectStatus-0"
>
  <div
    class="ObjectStatus-icon-0 ObjectStatus-iconError-0"
  >
    <ui5-icon
      accessible-name=""
      name="status-negative"
      style="font-size: 1rem;"
    />
  </div>
  <span
    class="ObjectStatus-textError-0"
  >
    Hello
  </span>
</div>
`;

exports[`ObjectStatus Text Deprecation 1`] = `
<div
  class="ObjectStatus-objectStatus-0"
>
  <div
    class="ObjectStatus-icon-0 ObjectStatus-iconError-0"
  >
    <ui5-icon
      accessible-name=""
      name="status-negative"
      style="font-size: 1rem;"
    />
  </div>
  <span
    class="ObjectStatus-textError-0"
  >
    Hello
  </span>
</div>
`;
